style.css
* {
	margin: 0;
	padding: 0;
	box-sizing: border-box;
}

body {
	font-family: 'Kalam', cursive;
	font-weight: bold;
}

html {
	scroll-behavior: smooth;
}

.green-shadow {
	text-shadow: rgb(200, 255, 82) 1px 0px 0px,
		rgb(200, 255, 82) 0.540302px 0.841471px 0px,
		rgb(200, 255, 82) -0.416147px 0.909297px 0px,
		rgb(200, 255, 82) -0.989992px 0.14112px 0px,
		rgb(200, 255, 82) -0.653644px -0.756802px 0px,
		rgb(200, 255, 82) 0.283662px -0.958924px 0px,
		rgb(200, 255, 82) 0.96017px -0.279415px 0px;
}

.titles {
	text-align: center;
}

/* NavBar Styling */

#navBar {
	display: flex;
	color: white;
	background: black;
	height: 2.5em;
	position: fixed;
	top: 0;
	min-width: 100vw;
	z-index: 1;
	padding: 0.5em;
	font-size: 1.5rem;
}

.container-nav {
	display: flex;
	justify-content: space-between;
	width: 90%;
	margin: 0 auto;
}

.menu {
	flex: 1;
	text-align: right;
}

.menu ul li {
	display: inline-block;
	list-style: none;
	margin-right: 3em;
	margin-top: 0;
}

#navBar a {
	color: inherit;
	text-decoration: inherit;
}

#navBar a:hover {
	color: #c8ff52;
}

#navBar i {
	margin-top: 0.5em;
	color: white;
	display: none;
}

/* Header Styling */

#parent {
	position: relative;
}

.header-imgs {
	display: flex;
}

.header-background {
	width: 50%;
	height: 20em;
}

.header-title-box {
	background-image: linear-gradient(#3ab1c8, #2772db);
	border-radius: 75%;
	border: 0.5em solid #c8ff52;
	top: 12%;
	left: 35%;
	width: 30%;
	height: 80%;
	position: absolute;
	z-index: 0;
}

#portrait {
	border-radius: 75%;
	top: 5%;
	left: 25%;
	position: absolute;
	border: 0.25em solid #c8ff52;
	max-width: 50%;
}

.header-title {
	top: 60%;
	position: relative;
}

.divider {
	top: 60%;
	position: relative;
	text-align: center;
}

#down-arrow {
	margin-top: 0.5em;
}

/* About Me Styling */

#about-container {
	padding: 1.8em;
	background-image: linear-gradient(#3ab1c8, #2772db);
}

.about-content {
	background-color: #f5ebeb;
	border-radius: 2em;
	border: 0.5em solid #c8ff52;
	margin-bottom: 3em;
	width: 60%;
	height: fit-content;
}

.about-content p {
	margin: 1em;
}

.about-me {
	display: flex;
	justify-content: space-evenly;
	margin-top: 0;
}

.about-img {
	height: 40em;
	border-radius: 2em;
	border: 0.5em solid #c8ff52;
}

.exp {
	display: flex;
	justify-content: space-evenly;
}

.experience {
	width: 45%;
}

.experience ul {
	list-style-type: none;
	margin: 5%;
}

.experience ul li {
	margin-bottom: 5%;
}

/* Portfolio Styling */

#portfolio-container {
	padding: 1.8em;
	background-image: linear-gradient(#2772db, #122cec);
}

.portfolio-btns {
	display: flex;
	justify-content: space-evenly;
}

.btn {
	width: fit-content;
	background-color: #3ab1c8;
	border: 0.15em solid black;
	border-radius: 0.75em;
	margin: 1em 0;
	padding: 0.5em;
	box-shadow: 0 0.15em;
	text-align: center;
	cursor: pointer;
}

.btn p {
	margin-top: 0.5em;
}

.btn.active {
	border: 0.15em solid #c8ff52;
	text-shadow: rgb(200, 255, 82) 1px 0px 0px,
		rgb(200, 255, 82) 0.540302px 0.841471px 0px,
		rgb(200, 255, 82) -0.416147px 0.909297px 0px,
		rgb(200, 255, 82) -0.989992px 0.14112px 0px,
		rgb(200, 255, 82) -0.653644px -0.756802px 0px,
		rgb(200, 255, 82) 0.283662px -0.958924px 0px,
		rgb(200, 255, 82) 0.96017px -0.279415px 0px;
}

.portfolio-cards {
	display: flex;
	justify-content: space-evenly;
	padding-bottom: 1.8em;
}

.project {
	display: flex;
	flex-direction: row;
	justify-content: space-between;
	margin: 0.25em;
	border-radius: 2.75em;
	background-color: #f5ebeb;
	border: #3ab1c8 solid 0.25em;
	flex: 0.5;
	position: relative;
	transition: flex 0.7s ease-in;
	box-shadow: 0 0.25em;
	cursor: pointer;
}

.project a {
	color: #122cec;
	text-decoration: inherit;
	margin: 0 2em;
}

.project.active {
	flex: 5;
	padding: 0.5em;
	border: black solid 0.25em;
}

.hide {
	display: none;
}

.project.active img {
	height: 98%;
	width: 35%;
	margin: 0.25em;
	border: black solid 0.25em;
}

.project img {
	height: 100%;
	width: 100%;
	border-radius: 2.5em;
}

.project-info {
	position: absolute;
	text-align: center;
	opacity: 0;
	width: 60%;
}

.project-info p {
	margin-bottom: 1em;
}

.project.active .project-info {
	opacity: 100;
	position: relative;
	margin: 1em 2em;
	transition: opacity 0.5s ease-in 0.6s;
}

/* Connect Styling */

#connect-container {
	text-align: center;
	padding: 1.8em;
	background-image: linear-gradient(#122cec, #2772db);
	max-height: fit-content;
}

.connect-info {
	display: flex;
	text-align: center;
}

.black-shadow {
	color: #ffffff;
	text-shadow: rgb(0, 0, 0) 2px 0px 0px, rgb(0, 0, 0) 1.75517px 0.958851px 0px,
		rgb(0, 0, 0) 1.0806px 1.68294px 0px, rgb(0, 0, 0) 0.141474px 1.99499px 0px,
		rgb(0, 0, 0) -0.832294px 1.81859px 0px,
		rgb(0, 0, 0) -1.60229px 1.19694px 0px, rgb(0, 0, 0) -1.97998px 0.28224px 0px,
		rgb(0, 0, 0) -1.87291px -0.701566px 0px,
		rgb(0, 0, 0) -1.30729px -1.5136px 0px,
		rgb(0, 0, 0) -0.421592px -1.95506px 0px,
		rgb(0, 0, 0) 0.567324px -1.91785px 0px,
		rgb(0, 0, 0) 1.41734px -1.41108px 0px,
		rgb(0, 0, 0) 1.92034px -0.558831px 0px;
}

.spacing {
	margin-top: 0.5em;
	margin-bottom: 2em;
}

.contact {
	width: 50%;
}

.seeking {
	text-align: center;
	width: 50%;
}

.social-links {
	display: flex;
	justify-content: center;
	margin: 0.5em 0 2em 40%;
	max-width: 15%;
	border-radius: 20em;
	background-color: #f5ebeb;
	position: relative;
}

.social-links img {
	max-width: 90%;
	margin: 0.5em 1em 0 0.2em;
	position: relative;
	border-radius: 100%;
	transition: 0.5s ease;
}

.social-links img:hover {
	background-color: #28c2ff;
	border-radius: 100%;
	transition: 2s ease;
}
/* ... */

